reactive-feature: коммит перед корректировкой багов