@@ -4,6 +4,7 @@ import com.shop.easybuy.common.exception.CartEmptyException;
 import com.shop.easybuy.common.exception.ObjectNotFoundException;
 import com.shop.easybuy.entity.order.*;
 import com.shop.easybuy.mapper.ItemMapper;
+import com.shop.easybuy.repository.OrderItemRepository;
 import com.shop.easybuy.repository.OrderRepository;
 import com.shop.easybuy.service.cart.CartService;
 import com.shop.easybuy.utils.Utils;
@@ -28,43 +29,72 @@ public class OrderServiceImpl implements OrderService {
 
     private final OrderRepository orderRepository;
 
-    private final ItemMapper itemMapper;
+    private final OrderItemRepository orderItemRepository;
 
     private final CartService cartService;
 
     @Override
     @Transactional
-    public Order buyItemsInCart() {
+    public Mono<OrderRsDto> buyItemsInCart() {
 
-        var foundInCart = cartService.getAllItems();
+        return cartService.getAllItems()
+                .flatMap(found -> {
+                    if (found.getFoundItems().isEmpty()) return Mono.error(() -> {
+                        log.error("Невозможно оформить заказ. Корзина пуста.");
+                        return new CartEmptyException();
+                    });
+                    var items = Utils.mergeList(found.getFoundItems());
 
-        if (foundInCart.getFoundItems().isEmpty()) {
-            log.error("Невозможно оформить заказ. Корзина пуста.");
-            throw new CartEmptyException();
-        }
+                    Order order = new Order();
+                    order.setTotal(found.getTotalCount());
+                    order.setCreatedAt(LocalDateTime.now());
 
-        var items = Utils.mergeList(foundInCart.getFoundItems());
-        Order order = new Order();
+                    return orderRepository.save(order)
+                            .flatMap(savedOrder -> {
+                                List<OrderItem> orderedItems = items.stream()
+                                        .map(itemRsDto -> OrderItem.builder()
+                                                .orderId(savedOrder.getId())
+                                                .itemId(itemRsDto.id())
+                                                .count(itemRsDto.count())
+                                                .build())
+                                        .toList();
 
-        List<OrderItem> orderedItems = items.stream()
-                .map(itemRsDto -> OrderItem
-                        .builder()
-                        .item(itemMapper.toItem(itemRsDto))
-                        .order(order)
-                        .count(itemRsDto.getCount())
-                        .build())
-                .toList();
+                                return Flux.fromIterable(orderedItems)
+                                        .flatMap(orderItemRepository::save)
+                                        .collectList()
+                                        .map(savedItems -> {
+                                            List<OrderItemDto> itemDtos = savedItems.stream()
+                                                    .map(oi -> {
+                                                        OrderItemDto dto = new OrderItemDto();
+                                                        dto.setId(oi.getId());
+                                                        dto.setItemId(oi.getItemId());
 
-        order.setItems(orderedItems);
-        order.setTotal(foundInCart.getTotalCount());
-        order.setCreatedAt(LocalDateTime.now());
+                                                        items.stream()
+                                                                .filter(i -> i.id().equals(oi.getItemId()))
+                                                                .findFirst()
+                                                                .ifPresent(original -> {
+                                                                    dto.setTitle(original.title());
+                                                                    dto.setDescription(original.description());
+                                                                    dto.setImagePath(original.imagePath());
+                                                                    dto.setPrice(original.price());
+                                                                });
 
-        Order savedOrder = orderRepository.save(order);
-        cartService.clearCart();
+                                                        dto.setCount(oi.getCount());
+                                                        return dto;
+                                                    }).toList();
 
-        log.info("Сформирован заказ с ID {} и количеством товаров {}.", savedOrder.getId(), savedOrder.getItems().size());
+                                            return new OrderRsDto(
+                                                    order.getId(),
+                                                    order.getTotal(),
+                                                    order.getCreatedAt(),
+                                                    itemDtos
+                                            );
+                                        });
+                            });
 
-        return savedOrder;
+                })
+                .flatMap(orderDto -> cartService.clearCart().thenReturn(orderDto))
+                .doOnSuccess(orderRsDto -> log.info("Сформирован заказ с ID {} и количеством товаров {}.", orderRsDto.getId(), orderRsDto.getItems().size()));
     }
 
     @Override
@@ -77,7 +107,7 @@ public class OrderServiceImpl implements OrderService {
                         return Mono.error(new ObjectNotFoundException("Заказ", id));
                     }
 
-                    var first = rows.get(0);
+                    var first = rows.getFirst();
                     var items = rows.stream()
                             .map(r -> new OrderItemDto(
                                     r.orderItemId(),
@@ -111,7 +141,7 @@ public class OrderServiceImpl implements OrderService {
 
                     return Flux.fromIterable(grouped.values())
                             .map(orderRows -> {
-                                var first = orderRows.get(0);
+                                var first = orderRows.getFirst();
                                 var items = orderRows.stream()
                                         .map(r -> new OrderItemDto(
                                                 r.orderItemId(),
